fix: [collapse] bug

--- a/assets/scss/collapse.scss
+++ b/assets/scss/collapse.scss
@@ -17,7 +17,6 @@
     }
 
     .c-collapse-title {
-      @apply inline-block;
       @apply select-none;
     }
   }
